fix(services): make services grid and items fully responsive on mobile

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -79,7 +79,7 @@
 ******************************************** */
 @media (max-width:770px) {
     .hero{
-        margin-left: 300px;
+        margin-left: 100px;
     }
 }
 @media (max-width:391px) {
@@ -97,7 +97,7 @@
     #spacer img{
         width: 650px;
         display: block;
-        margin-left: 450px;
+        margin-left: 350px;
 
     } 
    
